correcion de index
jose padilla 1/11/2018

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <header>
     <svg width="82" height="82" >
       <g>
-   <title>Layer 1</title>
+   <title>logo jp </title>
    <ellipse stroke="#000000" ry="37.250001" rx="37.250001" id="svg_3" cy="41.250001" cx="40.750001" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="5" fill="#FF0000"/>
    <text transform="matrix(2.5113205631643334,0,0,2.5113205631643334,-518.6587431802773,-371.22576199776864) " stroke="#000000" xml:space="preserve" text-anchor="middle" font-family="serif" font-size="24" id="svg_4" y="168.950722" x="224.859914" stroke-linecap="null" stroke-linejoin="null" stroke-dasharray="null" stroke-width="0" fill="#ffffff">jp</text>
   </g>
@@ -21,9 +21,9 @@
    <h3>Lugar de Nacimiento:Quibdo-Choco</h3>
     <nav>
       <ul>
-        <li><a href="html/inicio.html">Inicio</a></li>
-        <li><a href="html/educacion.html">Educación</a></li>
-        <li><a href="html/experiencia.html">Experiencia</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="educacion.html">Educación</a></li>
+        <li><a href="experiencia.html">Experiencia</a></li>
       </ul>
     </nav>
       <h1>Información Personal</h1>
