--- a/educacion.html
+++ b/educacion.html
@@ -21,9 +21,9 @@
    <h3>Lugar de Nacimiento:Quibdo-Choco</h3>
     <nav>
       <ul>
-        <li><a href="html/inicio.html">Inicio</a></li>
-        <li><a href="html/educacion.html">Educación</a></li>
-        <li><a href="html/experiencia.html">Experiencia</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="educacion.html">Educación</a></li>
+        <li><a href="experiencia.html">Experiencia</a></li>
       </ul>
     </nav>
       <h1>Educación</h1>
@@ -60,12 +60,15 @@
       </table>
         <h1>Agregar Estudio</h1>
         <form action="/action_page.php">
-             Año:<input type="date" id="fechanacimiento">
+             Año: <select>
+                       <option>2018</option>
+                       <option>2017</option>
+                 </select><br>
              Institución: <input type="text" name="LastName" value="Sena"><br>
              Lugar: <input type="text" name="LastName" value="Apartado"><br>
              ¿Culmino?:<b>Si</b><input type="radio">
-              <b>No</b><input type="radio"><br>
-             <input type="submit" value="Enviar">
+                       <b>No</b><input type="radio"><br>
+                       <input type="submit" value="Enviar">
          </form>
       <footer>
      <p>
