--- a/experiencia.html
+++ b/experiencia.html
@@ -21,16 +21,16 @@
    <h3>Lugar de Nacimiento:Quibdo-Choco</h3>
     <nav>
       <ul>
-        <li><a href="html/inicio.html">Inicio</a></li>
-        <li><a href="html/educacion.html">Educación</a></li>
-        <li><a href="html/experiencia.html">Experiencia</a></li>
+        <li><a href="index.html">Inicio</a></li>
+        <li><a href="educacion.html">Educación</a></li>
+        <li><a href="experiencia.html">Experiencia</a></li>
       </ul>
     </nav>
       <h1>Experiencia</h1>
-       <video src="../media/video/josevideo.mp4" controls width="400px" height="400px">jose_liderazgo </video>
+       <video src="media/video/josevideo.mp4" controls width="400px" height="400px">jose_liderazgo </video>
        <br>
        <p>Hobbies y actividades</p>
-      <audio src="../media/audio/Hobbies_actividades.mp3" controls> </audio>
+      <audio src="media/audio/Hobbies_actividades.mp3" controls> </audio>
       <footer>
      <p>
         Derechos Reservados
